@@ -1,8 +1,8 @@
 Package: anytime
 Type: Package
 Title: Anything to 'POSIXct' or 'Date' Converter
-Version: 0.2.0
-Date: 2016-12-24
+Version: 0.2.0.1
+Date: 2017-01-22
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Convert input in any one of character, integer, numeric, factor,
@@ -12,7 +12,8 @@ URL: http://dirk.eddelbuettel.com/code/anytime.html
 BugReports: https://github.com/eddelbuettel/anytime/issues
 License: GPL (>= 2)
 Encoding: UTF-8
-Imports: Rcpp
-LinkingTo: Rcpp, BH
+Depends: R (>= 3.2.0)
+Imports: Rcpp (>= 0.12.9)
+LinkingTo: Rcpp (>= 0.12.9), BH
 Suggests: gettz
 RoxygenNote: 5.0.1
